--- a/PlutoWallet/Components/Nft/NftOwnerView.xaml
+++ b/PlutoWallet/Components/Nft/NftOwnerView.xaml
@@ -5,10 +5,10 @@
              x:Class="PlutoWallet.Components.Nft.NftOwnerView"
              HeightRequest="40">
 
-    <card:Card IsThin="True"
+    <card:ClickableCard IsThin="True"
            AbsoluteLayout.LayoutBounds="0, .5, 1, 40"
            AbsoluteLayout.LayoutFlags="YProportional, WidthProportional">
-        <card:Card.View>
+        <card:ClickableCard.View>
 
             <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
                         x:Name="absoluteLayout">
@@ -37,6 +37,7 @@
                            HorizontalOptions="FillAndExpand"
                            Margin="10, 0, 0, 0"
                            Grid.Column="1"
+                           LineBreakMode="TailTruncation"
                            TextColor="{AppThemeBinding Dark=#fdfdfd, Light=#0a0a0a}"
                            FontAttributes="Bold"
                            FontFamily="SourceCode">
@@ -52,8 +53,7 @@
                            VerticalOptions="Center" 
                            HorizontalOptions="End"
                            Grid.Column="2"
-                           Source="subscanicon.png"
-                           >
+                           Source="subscanicon.png">
 
                         <Image.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding OpenSubscanOwnerPageCommand}"/>
@@ -63,8 +63,8 @@
 
                 </Grid>
             </AbsoluteLayout>
-        </card:Card.View>
+        </card:ClickableCard.View>
 
-    </card:Card>
+    </card:ClickableCard>
 
 </ContentView>
