--- a/PlutoWallet/View/BasePage.xaml
+++ b/PlutoWallet/View/BasePage.xaml
@@ -71,7 +71,7 @@
 
         <messagepopup:MessagePopupView />
 
-        <navigationbar:NavigationBarView />
+        <navigationbar:NavigationBarView SelectedOption="Home"/>
 
         <transferview:TransferView />
 
