--- a/PlutoWallet/Components/NavigationBar/NavigationBarView.xaml
+++ b/PlutoWallet/Components/NavigationBar/NavigationBarView.xaml
@@ -23,7 +23,8 @@
                 <Label.FormattedText>
                   <FormattedString>
                      <Span Text="Home"
-                           FontAttributes="{Binding HomeFontAttributes}"/>
+                           x:Name="homeSpan"
+                           FontAttributes="Bold"/>
                   </FormattedString>
                </Label.FormattedText>
 
@@ -41,7 +42,7 @@
                 <Label.FormattedText>
                   <FormattedString>
                      <Span Text="NFTs"
-                           FontAttributes="{Binding NftsFontAttributes}"/>
+                           x:Name="nftsSpan"/>
                   </FormattedString>
                </Label.FormattedText>
 
@@ -54,12 +55,12 @@
         </Grid>
 
         <Frame CornerRadius="30"
-            AbsoluteLayout.LayoutBounds="0.5, 0.5, 60, 60"
-            AbsoluteLayout.LayoutFlags="PositionProportional"
-            Padding="15"
-            BackgroundColor="{StaticResource Primary}"
-            BorderColor="{StaticResource Primary}"
-            x:Name="frame">
+                AbsoluteLayout.LayoutBounds="0.5, 0.5, 60, 60"
+                AbsoluteLayout.LayoutFlags="PositionProportional"
+                Padding="15"
+                BackgroundColor="{StaticResource Primary}"
+                BorderColor="{StaticResource Primary}"
+                x:Name="frame">
             <Image Source="transferwhite.png" />
 
             <Frame.GestureRecognizers>
