--- a/PlutoWallet/Components/Nft/NftPictureView.xaml
+++ b/PlutoWallet/Components/Nft/NftPictureView.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.Components.Nft.NftPictureView">
     <Border Padding="0"
-            HeightRequest="{Binding Source={x:Reference border}, Path=Width}"
+            HeightRequest="200"
+            WidthRequest="200"
             x:Name="border"
             Grid.Column="0"
             StrokeThickness="0">
